remove align content & fix align items -madhavi

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -3668,6 +3668,7 @@
 
 	.studies-cards-top {
 		flex-direction: column;
+		align-items: start;
 	}
 
 	.studiesbox-top p {
